<resources>
    <string name="app_name">africellsurvey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statusicone">statusIcone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="test_title">1.0</string>
    <string name="go_to_form">GO TO FORM</string>
    <string name="back">Back</string>
    <string name="channel_name">AfricellsurveyChannel</string>
    <string name="channel_description">Africellsurvey  Channel</string>
    <string name="ip">IP</string>
    <string name="send_to">share data</string>
    <string name="share_data">Share data</string>
    <string name="formtxt">Form</string>
</resources>