<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.FormFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        >



        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.96"
            >

            <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_weight="0.49"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#17a2b8"
                            android:text="@string/local"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            app:icon="@drawable/ic_add"
                            app:iconGravity="start"/>

                        <TextView
                            android:id="@+id/totalLocal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textSize="@dimen/t_36sp"
                            android:textAlignment="center"
                            android:background="#22C2DC"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.02"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    
                    android:layout_weight="0.49">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#28a745"
                            android:text="@string/remote"
                            android:textAlignment="center"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/totalRemote"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textSize="@dimen/t_36sp"
                            android:textAlignment="center"
                            android:background="#31CA54"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
            <!-- 70% Width End-->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="150dp"
            android:layout_weight="0.02"
            ></RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.7">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#FFFEFE"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.09"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/ftitleVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title of form | 1.0"
                        android:textColor="#000"
                        android:textSize="@dimen/t_18sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <View android:id="@+id/tile_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/dividerVertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/descr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="this is a description"
                        android:textSize="@dimen/t_16sp"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/fdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/d_20dp"
                        android:text="12/12/2020"
                        android:textColor="#000"
                        android:textSize="@dimen/t_14sp"
                        android:layout_below="@+id/descr"
                        />


                </RelativeLayout>
                <View android:id="@+id/tile_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
                    <!--android:background="?android:attr/dividerVertical"-->
                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressBar_cyclic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:orientation="horizontal"

                    >
                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/share_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_weight="0.4"

                        android:backgroundTint="#22C2DC"


                        android:text="@string/share_data"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_baseline_share_24"
                        app:iconGravity="start"
                        app:iconTint="@color/color_white"

                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"/>

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/buton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_weight="0.4"
                        android:layout_marginEnd="15dip"
                        android:backgroundTint="@color/colorPrimary"

                        android:text="@string/formtxt"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_fillform"
                        app:iconGravity="start"
                        app:iconTint="@color/color_white"

                        />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.05">


    </LinearLayout>

</LinearLayout>